--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="logo">
             <a href="homepage.html">
-                <img id="logo" src="Assets/Luminance_white_squared.png" />
+                <img id="logo" src="Assets/Luminance_white_squared" />
             </a>
 
         </div>
