--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="HandheldFriendly" content="true">
     <title>Luminence Homepage</title>
     <link rel="stylesheet" type="text/css" href="index.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
