--- a/productpage.html
+++ b/productpage.html
@@ -7,6 +7,8 @@
     <meta name="HandheldFriendly" content="true">
     <title>Luminance Product Page</title>
     <link rel="stylesheet" type="text/css" href="productpage.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
