--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="logo">
             <a href="homepage.html">
-                <img id="logo" src="Assets/Luminance_white_squared" />
+            <img id="logo" src="Assets/Luminance_white_squared.png" />
             </a>
 
         </div>
