fixed product css

--- a/productpage.html
+++ b/productpage.html
@@ -1,51 +1,53 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-   
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="HandheldFriendly" content="true">
-    <title>Luminance Product Page</title>
-    <link rel="stylesheet" type="text/css" href="productpage.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <header>
-      <div class="logo">
-        <a href="homepage.html">
-          <img id="logo" src="Assets/Luminance_white_squared.png" />
-        </a>
-      </div>
 
-        <div class="bg-img"></div>
-     
-      <div class="navbar">
-        <a href="productpage.html" class="menu-items">My Account</a>
-        <a href="https://www.luminance.com/resources.html#case-studies" target="_blank" rel="noopener noreferrer" class="menu-items">Case Studies</a>
-        <a href="https://www.luminance.com/resources.html#product-brochures" target="_blank" rel="noopener noreferrer" class="menu-items">Brochures</a>
-        <a href="https://vimeo.com/luminancetech" target="_blank" rel="noopener noreferrer" class="menu-items">Videos</a>
-        <a href="https://www.luminance.com/news/events/events-home.html" target="_blank" rel="noopener noreferrer"class="menu-items">Events</a>
-      </div>
-      <div class="sign">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="HandheldFriendly" content="true">
+  <title>Luminance Product Page</title>
+  <link rel="stylesheet" type="text/css" href="productpage.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <header>
+    <div class="logo">
+      <a href="homepage.html">
+        <img id="logo" src="Assets/Luminance_white_squared.png" />
+      </a>
+    </div>
+    <div class="bg-img"></div>
+    <div class="navbar">
+      <a href="productpage.html" target="_blank" rel="noopener noreferrer" class="menu-items">My Account</a>
+      <a href="https://www.luminance.com/resources.html#case-studies" target="_blank" rel="noopener noreferrer"
+        class="menu-items">Case Studies</a>
+      <a href="https://www.luminance.com/resources.html#product-brochures" target="_blank" rel="noopener noreferrer"
+        class="menu-items">Brochures</a>
+      <a href="https://vimeo.com/luminancetech" target="_blank" rel="noopener noreferrer" class="menu-items">Videos</a>
+      <a href="https://www.luminance.com/news/events/events-home.html" target="_blank" rel="noopener noreferrer"
+        class="menu-items">Events</a>
+    </div>
+    <div class="sign">
       <button onclick="location.href='homepage.html'" type="button">
         Logout</button>
-      </div>
-    </header>
+    </div>
+  </header>
   </div>
-        <div class="login-page">
-            <div class="login">
-              <div class="login-header">
-                  <div class="form">
-              <p>Upload your documents here:</p>
-              <form action="upload.html">
-                <input type="file" id="myFile" name="filename"></input>
-                <button class='button2'type="submit">Submit</button>
-              </form>
-              </div>
-            </div>
+  <div class="login-page">
+    <div class="login">
+      <div class="login-header">
+        <div class="form">
+          <p>Upload your documents here:</p>
+          <form action="upload.html">
+            <input type="file" id="myFile" name="filename"></input>
+            <button class='button2' type="submit">Submit</button>
+          </form>
+        </div>
+      </div>
     </div>
-    </div>
+  </div>
   <div class="container">
     <div class="calendar light">
       <div class="calendar_header">
@@ -91,15 +93,10 @@
       </div>
     </div>
   </div>
-     
-
-
   <div class="piechart">
     <p class="pietext">Completed Uploads</p>
- 
   </div>
-  
-      <table class="graph">
+  <table class="graph">
     <caption>Ongoing Projects</caption>
     <thead>
       <tr>
@@ -142,10 +139,11 @@
       </tr>
     </tbody>
   </table>
-              <footer >             
-                <p>
-                  Copyright @ 2020 Luminance Technology Ltd. | Privacy Policy
-                </p>
-              </footer>
-  </body>
+  <footer>
+    <p>
+      Copyright @ 2020 Luminance Technology Ltd. | Privacy Policy
+    </p>
+  </footer>
+</body>
+
 </html>
