open in same tab - menu item

--- a/productpage.html
+++ b/productpage.html
@@ -20,7 +20,7 @@
     </div>
     <div class="bg-img"></div>
     <div class="navbar">
-      <a href="productpage.html" target="_blank" rel="noopener noreferrer" class="menu-items">My Account</a>
+<a href="productpage.html" class="menu-items">My Account</a>
       <a href="https://www.luminance.com/resources.html#case-studies" target="_blank" rel="noopener noreferrer"
         class="menu-items">Case Studies</a>
       <a href="https://www.luminance.com/resources.html#product-brochures" target="_blank" rel="noopener noreferrer"
